--- a/Project Outputs for Candunio/Design Rule Check - Candunio.html
+++ b/Project Outputs for Candunio/Design Rule Check - Candunio.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2018-11-13</td>
+<td class="front_matter_column3">2020-02-14</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">4:50:02 PM</td>
+<td class="front_matter_column3">10:08:54 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3" style="color : red">9</td></tr>
+<td class="DRC_summary_header_col3" style="color : red">8</td></tr>
 </table>
 </td>
-</table><a name="ID2XFMPEGF4WJYC4YFZ5H2Q5OHHF3QE3OVYMUZAFHFB5OFEKNSDFWI"><h2>Summary</h2></a><table>
+</table><a name="ID3JMSPPOHYQYQM5RXC1PGA4HESK4M3ZK1CUMOEQNN0U340JYGB1KN"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,62 +265,62 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMIGGA4S3ZAIIL40PXFVEHZDBOOAAFBBK5HKNWOJMQNDJ3XPEXG3M">Clearance Constraint (Gap=0.1mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDHMXJBCQDO0UDMU5JMH1IBVXKTBXPVQH1BGBUEUOAAHVKZNJ5UIXP">Clearance Constraint (Gap=0.1mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDSYY3TJL4TSEYIRLJXNAARKC3IIE53CUTKNHBNRC2DG1VHRKUVT5">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDTAW1X5GIIRGHBNJYN5Y3FS4DCDN2ZUINSZSUZ5PAYLUN3JMPJUV">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSXFPAFSKFMYXN32FCBLT0RVYGBFRL2CQP1KB14JIYLNL1I4K2EWP">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDKBYIKRM1YT3XFIPSYTBKRMWJBM3XMCPUIY2DUUKNLWDZBEWIVSXP">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID3EJ5LLCTXZBINUO21TCQ3BL3Y4QZT0YRZIY4FPHKE04RDWSFVEH">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDOFP11ZELMIBIJ52JLNNMP1ELUOTUUEO1R01KT0DXSZOQQBXX5RFB">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDIM5K4NQOSKVTJTDY4RA3IF4LDHQ1BTJUKPBXQ3JE3EODYRUKNVGB">Width Constraint (Min=0.35mm) (Max=1mm) (Preferred=0.4mm) (All)</a></td>
+<td class="column1"><a href="#ID3IHPZHIPJNFKFAFDJRNBX4MXOLW4BJRLMIDYV1JLB32ZTVIIRKZC">Width Constraint (Min=0.35mm) (Max=1mm) (Preferred=0.4mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2ZYW1QCOCW5RK5DRN0HYGO4TQPL5HMJ3JU13CJBAMCIRVNY53V4K">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDVQ21VQ3WD5AGKAXPUMT1BZC34FB0JSVRVGFXGTK5ZVJPBQXVRQVJ">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJ11Z1GVHTSY4LSQVTI55HMLLELXXZ4PIVFDBHWF0LJFSDSXPRVNE">Hole Size Constraint (Min=0.2mm) (Max=5mm) (All)</a></td>
+<td class="column1"><a href="#IDZN24PWWULQ3GBMXX4YUBOTJEXOJ4B4C4KK3GKUEJNX3O1IBGELTF">Hole Size Constraint (Min=0.2mm) (Max=5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID3TPVERYVOWB3MXQOO1XIEQW5GC4KKQUP55MWIMOHQN4NULFNRBKI">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDHFKYJ1LM5H0QP0IQBW04KPB1IOOHEHDNCPQZCRHKVTJQEITSEK5E">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDETQLDPFHNQTYGAHURKHHCVYLIN1TWTEXILPJZFBMQEW2AO3FXHPJ">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</a></td>
-<td class="column2">7</td>
+<td class="column1"><a href="#IDTBQTECPXJTEPHRDHIPEI3NWAWCPSHFFLBUBSIPEFK0RQCKXNT1H">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</a></td>
+<td class="column2">6</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2RKCWCDO4UW4FDX0KD2VJKIRKNILJTPMSAWMAUHVPEIMAKL1IMML">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDLMVFFU31NXC4DURWZWLZFAWKDE44WX25QOKOLXKKEKICDTZOMTVJ">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</a></td>
 <td class="column2">2</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDKCCKJOQRNZDGEKITQRN5L5TUIBBNZLNGU5XIXYNVLGM5KPUV4DUP">Silk to Silk (Clearance=0.07mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID1PEAP44TVBEAEQ2HFXJJQK4BRCY502KAM5GYRUMI3BNREXXEYGWL">Silk to Silk (Clearance=0.07mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYND0WHKCESXSGOW4I4SURGK4AITK5CFJ0C2BZ0EX5UXG4QSCULHO">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDJQYKW01T5TMXFPJRX4ATPGST4TYA23RNZ3Z2OCHO3PL3ZQFTJJ">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID3MZFISO2ZJESMVAC5BUEXNZTOXANBFM512JNPGNOF1WS4NYH1W">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDFNIEEO3A4WICNJH45BLXHVH2BNIESBQERMTCLVJ2T2ZF0YXDEKKK">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">9</td>
+<td style="font-weight : bold" class="column2">8</td>
 </tr>
-</table><br><a name="IDETQLDPFHNQTYGAHURKHHCVYLIN1TWTEXILPJZFBMQEW2AO3FXHPJ"><table>
+</table><br><a name="IDTBQTECPXJTEPHRDHIPEI3NWAWCPSHFFLBUBSIPEFK0RQCKXNT1H"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</th>
 </tr>
@@ -337,23 +337,20 @@
 <td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=422.21mil|Location2.X=433.302mil|Location1.Y=270.044mil|Location2.Y=281.137mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=422.21mil|Location2.X=433.302mil|Location1.Y=270.044mil|Location2.Y=281.137mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.2mm &lt; 0.25mm) Between Pad P3-1(11.54mm,6mm) on Multi-Layer And Pad R1-1(10.5mm,8mm) on Bottom Layer [Bottom Solder] Mask Sliver [0.2mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=450.508mil|Location2.X=461.6mil|Location1.Y=502.328mil|Location2.Y=513.42mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=450.508mil|Location2.X=461.6mil|Location1.Y=502.328mil|Location2.Y=513.42mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.022mm &lt; 0.25mm) Between Pad R10-2(10.673mm,13.1mm) on Bottom Layer And Pad U5-18(11.92mm,13.825mm) on Bottom Layer [Bottom Solder] Mask Sliver [0.022mm]</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=762.17mil|Location2.X=773.263mil|Location1.Y=860.596mil|Location2.Y=871.688mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=762.17mil|Location2.X=773.263mil|Location1.Y=860.596mil|Location2.Y=871.688mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.2mm &lt; 0.25mm) Between Pad R6-1(19mm,23mm) on Top Layer And Pad Y2-2(19.7mm,20.9mm) on Top Layer [Top Solder] Mask Sliver [0.2mm]</acronym></a><br></td>
 </tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
 <td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=721.816mil|Location2.X=732.909mil|Location1.Y=860.596mil|Location2.Y=871.688mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=721.816mil|Location2.X=732.909mil|Location1.Y=860.596mil|Location2.Y=871.688mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.2mm &lt; 0.25mm) Between Pad R6-1(19mm,23mm) on Top Layer And Pad Y2-3(18.5mm,20.9mm) on Top Layer [Top Solder] Mask Sliver [0.2mm]</acronym></a><br></td>
 </tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="ID2RKCWCDO4UW4FDX0KD2VJKIRKNILJTPMSAWMAUHVPEIMAKL1IMML"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDLMVFFU31NXC4DURWZWLZFAWKDE44WX25QOKOLXKKEKICDTZOMTVJ"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=919.841mil|Location2.X=922.678mil|Location1.Y=658.03mil|Location2.Y=660.867mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=919.841mil|Location2.X=922.678mil|Location1.Y=658.03mil|Location2.Y=660.867mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (Collision &lt; 0.07mm) Between Pad C8-1(22.92mm,17.494mm) on Top Layer And Track (23.4mm,16.75mm)(23.4mm,21.35mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.065mm &lt; 0.07mm) Between Pad C8-1(22.72mm,17.5mm) on Top Layer And Track (23.4mm,16.75mm)(23.4mm,21.35mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.065mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=919.841mil|Location2.X=922.678mil|Location1.Y=658.03mil|Location2.Y=660.867mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=919.841mil|Location2.X=922.678mil|Location1.Y=658.03mil|Location2.Y=660.867mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (Collision &lt; 0.07mm) Between Pad C8-1(22.92mm,17.494mm) on Top Layer And Track (23.4mm,16.75mm)(33.6mm,16.75mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\akshd\Desktop\UVIC Hybrid team\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.065mm &lt; 0.07mm) Between Pad C8-1(22.72mm,17.5mm) on Top Layer And Track (23.4mm,16.75mm)(33.6mm,16.75mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.065mm]</acronym></a><br></td>
 </tr>
 </table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
 </html>
