--- a/Candunio.PcbDoc.htm
+++ b/Candunio.PcbDoc.htm
@@ -126,17 +126,17 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">2018-07-10</td>
+            <td class="front_matter_column3">2020-07-27</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">11:47:28 PM</td>
+            <td class="front_matter_column3">2:41:25 PM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\akshd\Desktop\UVIC Hybrid team\Candunio\Candunio.PcbDoc" class="file"><acronym title="C:\Users\akshd\Desktop\UVIC Hybrid team\Candunio\Candunio.PcbDoc">C:\Users\akshd\Desktop\UVIC Hybrid team\Candunio\Candunio.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc" class="file"><acronym title="C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc">C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
