--- a/Project Outputs for Candunio/Design Rule Check - Candunio.html
+++ b/Project Outputs for Candunio/Design Rule Check - Candunio.html
@@ -219,17 +219,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2020-09-07</td>
+<td class="front_matter_column3">2020-09-09</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">1:14:39 PM</td>
+<td class="front_matter_column3">6:01:53 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:02</td>
+<td class="front_matter_column3">00:00:01</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3" style="color : red">5</td></tr>
 </table>
 </td>
-</table><a name="IDCJOFNYHESV2SFT1DFDOIAKJ3DKCB3YF0LXH2UIFNII3K4ESLKTRP"><h2>Summary</h2></a><table>
+</table><a name="IDM3ZEJKYTM24BNQGHTS2UISL10FMJV3XLFUYFZDL5GVBUNA2X2ZGJ"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,75 +265,75 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID30JISURMYI3EIAGQW3XB1W2BWYJFJFDCGXJAUBBQCUTG1Z3RTHK">Clearance Constraint (Gap=0.1mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDOYNLROSN2Q0NKJ4OYZAKCQ0DLEVCAAIMW42CHGE2PH0P3Y43POBP">Clearance Constraint (Gap=0.1mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2QYL1ZHSO32RNSU04VQMDGMOGLIN2YHQBIECQBQ1IDNU0M3UI1L">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDMOYRU504TAXIPVEVKUF2Z52Z2F0GSXUKXMYEBB1SJJTUHPIP0EH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSZGUPUSIJ23UBSWTVY2SJYQVFKCYI4B21IWQHAETWKFEPAMETCUN">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDOW4W3BACNZRBBUMLA1WTVZY11DHLX3ST0GAQ0XM10XGWEYZMQ4QC">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID4GKKPF2DF0HQENYAGXQYLN5HEB5MBKCZ5Z1DAYCCZKQHCBMTU0MH">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDKKBQTEXE3ALLJJKLZR312KCLDB1F4O2SH3ZNCWCRWBHGSOFPFLVC">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSEUX4Y4JKYJEEDYJA0XBGW1ZBM0Y1PMCBAUF4POLWK21AP2A5PLM">Width Constraint (Min=0.35mm) (Max=1mm) (Preferred=0.4mm) (All)</a></td>
+<td class="column1"><a href="#ID32ZKIYCLCCUYEOVSCVX0AJIWEJN10TRLDPKDAQM2H5YR2GVANLIK">Width Constraint (Min=0.35mm) (Max=1mm) (Preferred=0.4mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID5IEVQRSGVZEJLQZT2GC4DCSNNBUKV05JNXE2UBB3QXJFWIFLSINH">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDBKKEUJMQ0C0SMMZSID0WLNSWZCMT4WQCND1WQL4SVR100JDFDBI">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHFN4VSZH0EH4OMUGEKUBGSRHTKH5BIBVTVNNPSBPDHN1YARIJOHO">Hole Size Constraint (Min=0.2mm) (Max=5mm) (All)</a></td>
+<td class="column1"><a href="#IDSZ3KT0VA55QMEIQ1HT1NGWCVYPFODJLN1GY3VSV1KT20R4A5WLO">Hole Size Constraint (Min=0.2mm) (Max=5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDSC2DRNXHEJFQGNLVCRARKMEV0C2RLHPCNYTZNSCBGL3XW52N2UZG">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDWP0512MKK4RBFMM41VAFAGL1KKJCGVKTEN1WBIKS5VSLXYYFZKZJ">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJ3UMCYHYACXVDZ3V3O2WJ0JPVLENTTLXNTCQIYE1XLTQXL0NSS4M">Minimum Solder Mask Sliver (Gap=0.24mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDR3G5KIJJN1DFOTVZCUPLM1IRJMAUMUDJOPX3LJFIZZQ5CDHVMOJE">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</a></td>
 <td class="column2">3</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDS35XX5OUGRY5JF1OECVE5USLACSQOC34BHXONWDLJGNX1LL33C">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDHK1ABFU1CMOFKUWHWDGNMLPX5LPCVIGCS4Y2NRHUCO1QPIAGBXJH">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</a></td>
 <td class="column2">2</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDEDQEJSXBGP2NE55JNJKHSG3TSLFMZ54WA1R0ELPI5XQ5EU0AZIB">Silk to Silk (Clearance=0.07mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDB43OOE5EWJUQO54CPZOLM3KTFI2E2TRHVQ1FZMCLSIEIE5QON20E">Silk to Silk (Clearance=0.07mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDCPUXF1KRVWZKMLR4RQKI3FAYRGUTYJIXP0MW0XKNIFRTBP20B1AP">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDNCG1G04UOBBNI3XTWW2SIAGLNP2Z3ZR3JJULHJO05DYKHHJKJHSK">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDXICYNM31ZCQABP3XC3R4QVREIEIZWMH5U2HAHREATMAV2XYRZ51G">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDTGC0W0044KFXC23GNM5YYCHNGI3ANQTLLJTTSDIIHPCUOQDJZEXL">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
 <td style="font-weight : bold" class="column2">5</td>
 </tr>
-</table><br><a name="IDJ3UMCYHYACXVDZ3V3O2WJ0JPVLENTTLXNTCQIYE1XLTQXL0NSS4M"><table>
+</table><br><a name="IDR3G5KIJJN1DFOTVZCUPLM1IRJMAUMUDJOPX3LJFIZZQ5CDHVMOJE"><table>
 <tr>
-<th style="text-align : left" colspan="1" class="rule">Minimum Solder Mask Sliver (Gap=0.24mm) (All),(All)</th>
+<th style="text-align : left" colspan="1" class="rule">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=422.406mil|Location2.X=433.105mil|Location1.Y=270.241mil|Location2.Y=280.94mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=422.406mil|Location2.X=433.105mil|Location1.Y=270.241mil|Location2.Y=280.94mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.2mm &lt; 0.24mm) Between Pad P3-1(11.54mm,6mm) on Multi-Layer And Pad R1-1(10.5mm,8mm) on Bottom Layer [Bottom Solder] Mask Sliver [0.2mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=694.132mil|Location2.Y=705.224mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=694.132mil|Location2.Y=705.224mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-1(35.3mm,17.447mm) on Top Layer And Pad J1-2(35.3mm,18.097mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=762.367mil|Location2.X=773.066mil|Location1.Y=860.792mil|Location2.Y=871.491mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=762.367mil|Location2.X=773.066mil|Location1.Y=860.792mil|Location2.Y=871.491mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.2mm &lt; 0.24mm) Between Pad R6-1(19mm,23mm) on Top Layer And Pad Y2-2(19.7mm,20.9mm) on Top Layer [Top Solder] Mask Sliver [0.2mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=719.722mil|Location2.Y=730.814mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=719.722mil|Location2.Y=730.814mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-2(35.3mm,18.097mm) on Top Layer And Pad J1-3(35.3mm,18.747mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=722.013mil|Location2.X=732.712mil|Location1.Y=860.792mil|Location2.Y=871.491mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=722.013mil|Location2.X=732.712mil|Location1.Y=860.792mil|Location2.Y=871.491mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.2mm &lt; 0.24mm) Between Pad R6-1(19mm,23mm) on Top Layer And Pad Y2-3(18.5mm,20.9mm) on Top Layer [Top Solder] Mask Sliver [0.2mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=770.904mil|Location2.Y=781.996mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=770.904mil|Location2.Y=781.996mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-4(35.3mm,19.397mm) on Top Layer And Pad J1-5(35.3mm,20.047mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
 </tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDS35XX5OUGRY5JF1OECVE5USLACSQOC34BHXONWDLJGNX1LL33C"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDHK1ABFU1CMOFKUWHWDGNMLPX5LPCVIGCS4Y2NRHUCO1QPIAGBXJH"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</th>
 </tr>
