--- a/Project Outputs for Candunio/Design Rule Check - Candunio.html
+++ b/Project Outputs for Candunio/Design Rule Check - Candunio.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2020-09-09</td>
+<td class="front_matter_column3">2020-09-10</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">6:01:53 PM</td>
+<td class="front_matter_column3">10:22:51 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -234,7 +234,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc" class="file"><acronym title="C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc">C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc" class="file"><acronym title="C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc">C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3" style="color : red">5</td></tr>
+<td class="DRC_summary_header_col3" style="color : red">6</td></tr>
 </table>
 </td>
-</table><a name="IDM3ZEJKYTM24BNQGHTS2UISL10FMJV3XLFUYFZDL5GVBUNA2X2ZGJ"><h2>Summary</h2></a><table>
+</table><a name="IDFUPEXNIVBKFIGETREQDMQMBKAIATBE4G3O0VVCOLHUSZMEN1UKW"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,83 +265,86 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOYNLROSN2Q0NKJ4OYZAKCQ0DLEVCAAIMW42CHGE2PH0P3Y43POBP">Clearance Constraint (Gap=0.1mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDNUULTAODGA10JO4FVYHTCHOPVEAC4QQMVK1SN0CTAGXDYZM4XBHC">Clearance Constraint (Gap=0.1mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDMOYRU504TAXIPVEVKUF2Z52Z2F0GSXUKXMYEBB1SJJTUHPIP0EH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDVVJUPY1ZJE5QY5YF30VF4GZKJ5HHMJ0YADTDXHWKDNQ3E55BRBO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOW4W3BACNZRBBUMLA1WTVZY11DHLX3ST0GAQ0XM10XGWEYZMQ4QC">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDOKH2ZBZLFLGEOPJEYSXVTYLULPGVWWYWAHNSRHCKVTXH3HREH4TH">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDKKBQTEXE3ALLJJKLZR312KCLDB1F4O2SH3ZNCWCRWBHGSOFPFLVC">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDRMD2N2U4VFWPPOLP22JCEMBFGJX4ZK0ODHELECKTX4QUCWBTIUSJ">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID32ZKIYCLCCUYEOVSCVX0AJIWEJN10TRLDPKDAQM2H5YR2GVANLIK">Width Constraint (Min=0.35mm) (Max=1mm) (Preferred=0.4mm) (All)</a></td>
+<td class="column1"><a href="#IDVZNCCCL4DRTWFR2IHGQBFVCO33MBNAR0L5O5XKIZCVNJAHBVPYC">Width Constraint (Min=0.35mm) (Max=1mm) (Preferred=0.4mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDBKKEUJMQ0C0SMMZSID0WLNSWZCMT4WQCND1WQL4SVR100JDFDBI">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID3P4WPEA2O0L2K3ALERTRDKBQ5JMA5X3E5QZNJ1JAQCLFM5Z20F4F">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSZ3KT0VA55QMEIQ1HT1NGWCVYPFODJLN1GY3VSV1KT20R4A5WLO">Hole Size Constraint (Min=0.2mm) (Max=5mm) (All)</a></td>
+<td class="column1"><a href="#IDC3ZYAFKZ4UAXDQ45GHRC2SZF1MARSUSYAMGLIOHQOU3RGIYGUT0">Hole Size Constraint (Min=0.2mm) (Max=5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDWP0512MKK4RBFMM41VAFAGL1KKJCGVKTEN1WBIKS5VSLXYYFZKZJ">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID4P02ZFWZTGNHPX053BLNYDV0CINBRDTM4AA2BSFFRVOPFA1XTQHC">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDR3G5KIJJN1DFOTVZCUPLM1IRJMAUMUDJOPX3LJFIZZQ5CDHVMOJE">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDPLE4SC11Z5XLM5O15BNLL0J52BPA1ODWAMWFPZEARFQ2WMHTSLUP">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</a></td>
 <td class="column2">3</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHK1ABFU1CMOFKUWHWDGNMLPX5LPCVIGCS4Y2NRHUCO1QPIAGBXJH">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</a></td>
-<td class="column2">2</td>
+<td class="column1"><a href="#ID0EM5LWP4KGTCFXQC2X4HLHODGCY4VDO3TLNCFHC50ENGM1ND5TLO">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</a></td>
+<td class="column2">3</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDB43OOE5EWJUQO54CPZOLM3KTFI2E2TRHVQ1FZMCLSIEIE5QON20E">Silk to Silk (Clearance=0.07mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDG4PAFAYOLW1TJ104FMKMYMENLDLJJRRRYBVHX5KZDDNP3KM512CF">Silk to Silk (Clearance=0.07mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNCG1G04UOBBNI3XTWW2SIAGLNP2Z3ZR3JJULHJO05DYKHHJKJHSK">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDC5E21BHUGJD1LX0WEFCOBGVUZFNRPUNGCWMD0SEBE30SY5KCPZHJ">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDTGC0W0044KFXC23GNM5YYCHNGI3ANQTLLJTTSDIIHPCUOQDJZEXL">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDSV552LOHOCFEPBUVXGTE40ATKNDY4XM3LJ1PAEHSY5BIPXHEWRYI">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">5</td>
+<td style="font-weight : bold" class="column2">6</td>
 </tr>
-</table><br><a name="IDR3G5KIJJN1DFOTVZCUPLM1IRJMAUMUDJOPX3LJFIZZQ5CDHVMOJE"><table>
+</table><br><a name="IDPLE4SC11Z5XLM5O15BNLL0J52BPA1ODWAMWFPZEARFQ2WMHTSLUP"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Minimum Solder Mask Sliver (Gap=0.25mm) (All),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=694.132mil|Location2.Y=705.224mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=694.132mil|Location2.Y=705.224mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-1(35.3mm,17.447mm) on Top Layer And Pad J1-2(35.3mm,18.097mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=542.683mil|Location2.Y=553.775mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=542.683mil|Location2.Y=553.775mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-1(35.3mm,13.6mm) on Top Layer And Pad J1-2(35.3mm,14.25mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=719.722mil|Location2.Y=730.814mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=719.722mil|Location2.Y=730.814mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-2(35.3mm,18.097mm) on Top Layer And Pad J1-3(35.3mm,18.747mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=568.273mil|Location2.Y=579.365mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=568.273mil|Location2.Y=579.365mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-2(35.3mm,14.25mm) on Top Layer And Pad J1-3(35.3mm,14.9mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=770.904mil|Location2.Y=781.996mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=770.904mil|Location2.Y=781.996mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-4(35.3mm,19.397mm) on Top Layer And Pad J1-5(35.3mm,20.047mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=619.455mil|Location2.Y=630.548mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1357.644mil|Location2.X=1368.736mil|Location1.Y=619.455mil|Location2.Y=630.548mil|Absolute=True">Minimum Solder Mask Sliver Constraint: (0.25mm &lt; 0.25mm) Between Pad J1-4(35.3mm,15.55mm) on Top Layer And Pad J1-5(35.3mm,16.2mm) on Top Layer [Top Solder] Mask Sliver [0.25mm]</acronym></a><br></td>
 </tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDHK1ABFU1CMOFKUWHWDGNMLPX5LPCVIGCS4Y2NRHUCO1QPIAGBXJH"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="ID0EM5LWP4KGTCFXQC2X4HLHODGCY4VDO3TLNCFHC50ENGM1ND5TLO"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Silk To Solder Mask (Clearance=0.07mm) (IsPad),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.065mm &lt; 0.07mm) Between Pad C8-1(22.72mm,17.5mm) on Top Layer And Track (23.4mm,16.75mm)(23.4mm,21.35mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.065mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.065mm &lt; 0.07mm) Between Pad C8-1(22.72mm,17.5mm) on Top Layer And Track (23.4mm,16.75mm)(23.4mm,21.35mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.065mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\maanj\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.065mm &lt; 0.07mm) Between Pad C8-1(22.72mm,17.5mm) on Top Layer And Track (23.4mm,16.75mm)(33.6mm,16.75mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.065mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=914.04mil|Location2.X=918.046mil|Location1.Y=657.446mil|Location2.Y=661.452mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.065mm &lt; 0.07mm) Between Pad C8-1(22.72mm,17.5mm) on Top Layer And Track (23.4mm,16.75mm)(33.6mm,16.75mm) on Top Overlay [Top Overlay] to [Top Solder] clearance [0.065mm]</acronym></a><br></td>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1364.958mil|Location2.X=1368.964mil|Location1.Y=698.618mil|Location2.Y=702.624mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\leahc\Documents\GitHub\CanDuino\Candunio.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1364.958mil|Location2.X=1368.964mil|Location1.Y=698.618mil|Location2.Y=702.624mil|Absolute=True">Silk To Solder Mask Clearance Constraint: (0.034mm &lt; 0.07mm) Between Pad J1-0(35.3mm,17.4mm) on Multi-Layer And Text "R12" (35.3mm,17.4mm) on Bottom Overlay [Bottom Overlay] to [Bottom Solder] clearance [0.034mm]</acronym></a><br></td>
 </tr>
 </table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
 </html>
